--- a/Serge_Kanashin/package.json
+++ b/Serge_Kanashin/package.json
@@ -26,8 +26,12 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^1.0.0",
+    "eslint": "^5.4.0",
     "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "html-webpack-plugin": "^3.2.0",
+    "jquery": "^3.3.1",
+    "node-sass": "^4.9.3",
+    "sass-loader": "^7.1.0",
     "style-loader": "^0.22.0",
     "webpack": "^4.16.5",
     "webpack-cli": "^3.1.0",
